--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ cython_debug/
 
 **/serverless_rag_with_lambda_lance_bedrock/lambda-bedrock-s3-streaming-rag/**
 **/serverless_rag_with_lambda_lance_bedrock/serverless_rag_with_lambda_lance_bedrock/**
+
+**.tfvars
