--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/package.json
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/package.json
@@ -11,8 +11,15 @@
     "@smithy/signature-v4": "^2.0.12",
     "@smithy/util-utf8": "^2.0.0",
     "langchain": "^0.1.19",
-    "vectordb": "^0.1.19",
-    "@lancedb/vectordb-linux-x64-gnu": "^0.3.5"
+    "vectordb": "^0.1.19"
   },
+  "optionalDependencies": {
+    "@lancedb/vectordb-linux-x64-gnu": "^0.3.5",
+    "@lancedb/vectordb-win32-x64-msvc": "^0.3.5"
+  },
+  "os": [
+    "linux",
+    "win32"
+  ],
   "type": "module"
 }
