--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/python/requirements.txt
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/python/requirements.txt
@@ -4,4 +4,4 @@ langchain>=0.3.19
 langchain-aws>=0.2.14
 langchain-community>=0.3.14
 langchain-core>=0.3.37
-# changed again and again as per the requirement
+# changed again and again as per the requirement and again
