--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/python/Dockerfile
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/python/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY index.py .
 
 # Set the entrypoint for the Lambda container
-CMD ["index.lambda_handler"]
+CMD ["index.handler"]
