--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/data-pipeline/requirements.txt
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/data-pipeline/requirements.txt
@@ -1,4 +1,8 @@
-boto3==1.28.73
-lancedb==0.3.2
-langchain==0.0.325
-pypdf==3.17.0
+boto3
+langchain-text-splitters
+langchain-community
+langchain-aws
+lancedb
+pyarrow
+pandas
+pypdf
