--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/package.json
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/package.json
@@ -37,5 +37,8 @@
   "os": [
     "linux",
     "win32"
-  ]
+  ],
+  "_moduleAliases": {
+  "@lancedb/lancedb": "@lancedb/lancedb-linux-x64-musl"
+}
 }
