--- a/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/Dockerfile
+++ b/serverless_rag_with_lambda_lance_bedrock/rag_lambda/mjs/Dockerfile
@@ -1,23 +1,19 @@
-# Use an official Node.js runtime as the base image
-#FROM public.ecr.aws/lambda/nodejs:18
 FROM public.ecr.aws/amazonlinux/amazonlinux:2023
 
-# Install Node.js (if not already bundled)
-RUN yum install -y nodejs npm git
-
-RUN yum install -y glibc
+# Install Node.js 18
+RUN dnf install -y nodejs npm git
 
 # Set the working directory
 WORKDIR /var/task
 
-# Copy package.json and package-lock.json for dependency installation
-COPY package.json ./
+# Copy and install dependencies
+COPY package*.json ./
 
-# Install dependencies
-RUN npm install --production
-
-# Copy the application code
+# Copy application code
 COPY index.mjs .
 
-# Set the entrypoint for the Lambda container
+# Optional: Confirm glibc version
+RUN ldd --version
+
+# Set the Lambda handler
 CMD ["index.handler"]
